--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,5 @@ calvin_venv/*
 dataset/*
 
 experiments
+calvin_models/calvin_agent/evaluation/downloads
+calvin_models/calvin_agent/evaluation/jax-diffusion-model-20000
